# llama.cpp-omni

./: .gitignore  README.md
tools/omni/: CMakeLists.txt  README.md  omni-cli.cpp  omni.cpp  omni.h  py_omni.cpp
tools/omni/app/: README.md  run.sh  server.py
tools/omni/app/static/: index.html
tools/omni/app/tests/: collect_audio.py  generate_timeline_html.py  test_backend_api.py  test_duplex_stream.py  test_duplex_timeline.py  test_omni_realdata.py  test_simplex_rtf.py
tools/omni/token2wav/: token2wav-impl.cpp
tools/server/: server.cpp
